# ai-sdet-learning-lab

./: .gitignore  README.md  pyproject.toml
samples/: pytest_output.txt
scripts/: pytest_summary.py
tests/: test_pytest_summary.py
